--- a/testnvm/Cargo.toml
+++ b/testnvm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "testn_nvm"
-version = "0.0.0"
+name = "testnvm"
+version = "0.0.1"
 edition = "2024"
 license = "Apache-2.0"
 publish = false
