--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -57,15 +57,16 @@ jobs:
 
       - name: "scratch test"
         run: |
-          docker pull ghcr.io/githedgehog/testn/n-vm:0.0.2
+          docker pull ghcr.io/githedgehog/testn/n-vm:0.0.3
           docker run --privileged --rm --cap-add=SYS_ADMIN busybox:latest sh -c "echo 4 > /sys/kernel/mm/hugepages/hugepages-1048576kB/nr_hugepages && cat /sys/kernel/mm/hugepages/hugepages-1048576kB/nr_hugepages"
-          cat /sys/kernel/mm/hugepages/hugepages-1048576kB/nr_hugepages
-          echo 4 | sudo tee /sys/kernel/mm/hugepages/hugepages-1048576kB/nr_hugepages
+          docker run --privileged --rm --cap-add=SYS_ADMIN busybox:latest sh -c "echo 256 > /sys/kernel/mm/hugepages/hugepages-2048kB/nr_hugepages && cat /sys/kernel/mm/hugepages/hugepages-2048kB/nr_hugepages"
           cargo test --package=scratch
 
       - name: "build"
         run: |
-          nix build -f default.nix n-vm.container
+          nix-channel --add https://nixos.org/channels/nixos-unstable nixpkgs
+          nix-channel --update
+          nix build -f default.nix testn.container
           docker load < ./result
           docker build --tag ghcr.io/githedgehog/testn/n-vm:0.0.0 .
           # TODO: push to ghcr.io (this requires plumbing the version from git into the build)
