--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -60,6 +60,7 @@ jobs:
           docker pull ghcr.io/githedgehog/testn/n-vm:0.0.3
           docker run --privileged --rm --cap-add=SYS_ADMIN busybox:latest sh -c "echo 4 > /sys/kernel/mm/hugepages/hugepages-1048576kB/nr_hugepages && cat /sys/kernel/mm/hugepages/hugepages-1048576kB/nr_hugepages"
           docker run --privileged --rm --cap-add=SYS_ADMIN busybox:latest sh -c "echo 256 > /sys/kernel/mm/hugepages/hugepages-2048kB/nr_hugepages && cat /sys/kernel/mm/hugepages/hugepages-2048kB/nr_hugepages"
+          false
           cargo test --package=scratch
 
       - name: "build"
