--- a/n-vm/Cargo.toml
+++ b/n-vm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "n-vm"
-version = "0.0.4"
+version = "0.0.5"
 edition = "2024"
 license = "Apache-2.0"
 publish = false
@@ -10,47 +10,17 @@ publish = false
 n-vm-macros = { path = "../n-vm-macros" }
 
 # external
-cloud-hypervisor-client = "0.3.3"
+capctl = { workspace = true, default-features = false, features = [] }
+cloud-hypervisor-client = { workspace = true, default-features = false, features = [] }
+command-fds = { workspace = true, default-features = false, features = ["tokio"] }
+bollard = { workspace = true, default-features = false, features = ["pipe", "ssl_providerless"] }
+nix = { workspace = true, default-features = false, features = ["signal", "user"] }
 serde = { workspace = true, default-features = false, features = ["derive"] }
-tokio-stream.workspace = true
-tokio-util = { version = "0.7.16", features = ["codec"] }
-capctl = "0.2.4"
-
-[dependencies.serde_json]
-version = "1.0.143"
-default-features = false
-features = ["std"]
-
-[dependencies.tokio-vsock]
-version = "0.7.2"
-
-[dependencies.bollard]
-version = "0.19.2"
-
-[dependencies.tokio-serde]
-version = "0.9.0"
-features = ["json"]
-default-features = false
-
-[dependencies.command-fds]
-workspace = true
-features = ["tokio"]
-
-[dependencies.tokio]
-workspace = true
-features = ["rt", "process", "macros", "fs", "net", "time", "io-util", "net", "io-std"]
-
-[dependencies.nix]
-workspace = true
-default-features = false
-features = ["signal", "user"]
-
-[dependencies.tracing]
-workspace = true
-default-features = false
-features = []
-
-[dependencies.tracing-subscriber]
-workspace = true
-default-features = false
-features = ["fmt"]
+serde_json = { workspace = true, default-features = false, features = ["std"] }
+tokio = { workspace = true, default-features = false, features = ["rt", "process", "macros", "fs", "net", "time", "io-util", "net", "io-std"] }
+tokio-serde = { workspace = true, default-features = false, features = ["json"] }
+tokio-stream = { workspace = true, default-features = false, features = [] }
+tokio-util = { workspace = true, default-features = false, features = ["codec"] }
+tokio-vsock = { workspace = true, default-features = false, features = [] }
+tracing = { workspace = true, default-features = false, features = [] }
+tracing-subscriber = { workspace = true, default-features = false, features = ["fmt"] }
