--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -55,20 +55,16 @@ jobs:
 
       - uses: "dtolnay/rust-toolchain@stable"
 
-      - name: "scratch test"
-        run: |
-          docker pull ghcr.io/githedgehog/testn/n-vm:0.0.4
-          docker run --privileged --rm busybox:latest sh -c "echo 512 > /sys/kernel/mm/hugepages/hugepages-2048kB/nr_hugepages && cat /sys/kernel/mm/hugepages/hugepages-2048kB/nr_hugepages"
-          cargo test --package=scratch
-
-      - name: "build"
+      - name: "build and test"
         run: |
           nix-channel --add https://nixos.org/channels/nixos-unstable nixpkgs
           nix-channel --update
           nix build -f default.nix testn.container
           docker load < ./result
-          docker build --tag ghcr.io/githedgehog/testn/n-vm:0.0.0 .
-          # TODO: push to ghcr.io (this requires plumbing the version from git into the build)
+          docker build --tag ghcr.io/githedgehog/testn/n-vm:v0.0.6 .
+          docker run --privileged --rm busybox:latest sh -c "echo 1024 > /sys/kernel/mm/hugepages/hugepages-2048kB/nr_hugepages && cat /sys/kernel/mm/hugepages/hugepages-2048kB/nr_hugepages"
+          cargo test --package=scratch
+          docker push ghcr.io/githedgehog/testn/n-vm:v0.0.6
 
       - name: "Setup tmate session for debug"
         if: ${{ failure() && github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
